# python-gnmi-proto

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  Makefile.in  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: code-quality.yml  main.yml  release.yml
src/gnmi/proto/: __init__.py  legacy.py
src/gnmi/proto/_internal/gnmi/: __init__.py
src/gnmi/proto/_internal/gnmi_ext/: __init__.py
src/gnmi/proto/_legacy/collector/: collector.proto  collector_pb2.py  collector_pb2_grpc.py
src/gnmi/proto/_legacy/gnmi/: gnmi.proto  gnmi_pb2.py  gnmi_pb2_grpc.py
src/gnmi/proto/_legacy/gnmi_ext/: gnmi_ext.proto  gnmi_ext_pb2.py  gnmi_ext_pb2_grpc.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  path.py  target.py  test_integration_gnmi.py  test_integration_legacy.py  validation.py
tests/integration/fixtures/: config.json
tests/juniper/: test_juniper_gnmi_set.py
